--- a/articles/active-directory-b2c/TOC.yml
+++ b/articles/active-directory-b2c/TOC.yml
@@ -357,6 +357,20 @@
               href: relyingparty.md
             - name: 声明解析程序
               href: claim-resolver-overview.md
+    - name: 合作伙伴集成
+      items:
+        - name: Azure AD B2C 合作伙伴库
+          href: partner-gallery.md
+        - name: Arkose Labs
+          href: partner-arkose-labs.md
+        - name: IDology
+          href: partner-idology.md
+        - name: itsme
+          href: partner-itsme.md
+        - name: Trusona
+          href: partner-trusona.md
+        - name: Twilio
+          href: partner-twilio.md
     - name: 使用 b2clogin.com
       items:
         - name: b2clogin.com 概述
