--- a/articles/governance/resource-graph/index.yml
+++ b/articles/governance/resource-graph/index.yml
@@ -9,13 +9,13 @@ metadata:
   ms.collection: collection
   author: DCtheGeek
   ms.author: dacoulte
-  ms.date: 05/20/2020
-  ms.openlocfilehash: 31363296d07c9e5181b4c6ab2781a455a4799dbc
-  ms.sourcegitcommit: 64fc70f6c145e14d605db0c2a0f407b72401f5eb
+  ms.date: 06/16/2020
+  ms.openlocfilehash: 8f4bce7f5230af69a4a1efc3382c3ca6d4a24f59
+  ms.sourcegitcommit: e3c28affcee2423dc94f3f8daceb7d54f8ac36fd
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/27/2020
-  ms.locfileid: "83874111"
+  ms.lasthandoff: 06/17/2020
+  ms.locfileid: "84888138"
 landingContent:
 - title: 关于 Azure Resource Graph
   linkLists:
@@ -37,10 +37,12 @@ landingContent:
     links:
     - text: 第一个查询（门户）
       url: ./first-query-portal.md
-    - text: 第一个查询 (PowerShell)
-      url: ./first-query-powershell.md
-    - text: 第一个查询 (CLI)
+    - text: 第一个查询 (Azure CLI)
       url: ./first-query-azurecli.md
+    - text: 第一个查询 (Azure PowerShell)
+      url: ./first-query-powershell.md
+    - text: 第一个查询 (Go)
+      url: ./first-query-go.md
     - text: 第一个查询 (Python)
       url: ./first-query-python.md
     - text: 共享查询（门户）
