--- a/articles/remote-rendering/index.yml
+++ b/articles/remote-rendering/index.yml
@@ -9,12 +9,12 @@ metadata:
   author: florianborn71
   ms.author: flborn
   ms.date: 03/26/2020
-  ms.openlocfilehash: 9f27118bfe3e01ce8d1cfc8c60c46c416b39c846
-  ms.sourcegitcommit: f0b206a6c6d51af096a4dc6887553d3de908abf3
+  ms.openlocfilehash: 265c4087dbb93bc429cf61ebbeab13dc18c83353
+  ms.sourcegitcommit: ad66392df535c370ba22d36a71e1bbc8b0eedbe3
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/28/2020
-  ms.locfileid: "84142123"
+  ms.lasthandoff: 06/16/2020
+  ms.locfileid: "84808928"
 landingContent:
 - title: 关于 Azure 远程渲染
   linkLists:
@@ -52,6 +52,8 @@ landingContent:
       url: quickstarts/deploy-to-hololens.md
     - text: 将 Unity 示例部署到桌面
       url: quickstarts/deploy-to-desktop.md
+    - text: 将原生 C++ 示例部署到 HoloLens
+      url: quickstarts/native-cpp/hololens/deploy-native-cpp-tutorial.md
     - text: 转换用于渲染的模型
       url: quickstarts/convert-model.md
 - title: 了解如何构建自己的应用
