--- a/articles/azure-arc/kubernetes/index.yml
+++ b/articles/azure-arc/kubernetes/index.yml
@@ -10,12 +10,12 @@ metadata:
   ms.topic: landing-page
   ms.date: 05/19/2020
   ms.author: mlearned
-  ms.openlocfilehash: a2ba3c789d6f7b6dea352468c01533b21c56812d
-  ms.sourcegitcommit: fdec8e8bdbddcce5b7a0c4ffc6842154220c8b90
+  ms.openlocfilehash: 80f3faa93315d5c20c2e1876cb46f7771433969d
+  ms.sourcegitcommit: 23604d54077318f34062099ed1128d447989eea8
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/19/2020
-  ms.locfileid: "83661969"
+  ms.lasthandoff: 06/20/2020
+  ms.locfileid: "85117686"
 landingContent:
 - title: Azure Arc 概述
   linkLists:
@@ -38,7 +38,7 @@ landingContent:
     - text: 将 GitOps 与 Helm 结合使用
       url: ./use-gitops-with-helm.md
     - text: 对容器使用 Azure Monitor
-      url: ./deploy-azure-monitor-for-containers.md
+      url: ../../azure-monitor/insights/container-insights-enable-arc-enabled-clusters.md
     - text: 使用 Azure Policy
       url: ./use-azure-policy.md
     - text: 部署 Azure IoT Edge 工作负载
