--- a/articles/cognitive-services/index.yml
+++ b/articles/cognitive-services/index.yml
@@ -11,12 +11,12 @@ metadata:
   ms.author: nitinme
   manager: nitinme
   ms.date: 03/24/2020
-  ms.openlocfilehash: 398ba97ed8cc221710c301017cae3624dde758f0
-  ms.sourcegitcommit: 223cea58a527270fe60f5e2235f4146aea27af32
+  ms.openlocfilehash: dae82c058d5d4e3b2f4c9003c2642456fa71b215
+  ms.sourcegitcommit: 6fd28c1e5cf6872fb28691c7dd307a5e4bc71228
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 06/01/2020
-  ms.locfileid: "84259450"
+  ms.lasthandoff: 06/23/2020
+  ms.locfileid: "85211196"
 highlightedContent:
   items:
   - title: 什么是认知服务？
@@ -59,7 +59,7 @@ conceptualContent:
       text: 人脸
     - url: ./form-recognizer/index.yml
       itemType: overview
-      text: 表单识别器（预览版）
+      text: 表单识别器
     - url: ./ink-recognizer/index.yml
       itemType: overview
       text: 墨迹识别器（预览版）
