--- a/articles/data-factory/TOC.yml
+++ b/articles/data-factory/TOC.yml
@@ -194,30 +194,6 @@
               href: wrangling-data-flow-overview.md
             - name: 支持的函数
               href: wrangling-data-flow-functions.md
-    - name: Data Lake 与 EDW 的数据迁移
-      items:
-        - name: 为什么使用 Azure 数据工厂
-          href: data-migration-guidance-overview.md
-        - name: 将数据从 AWS S3 迁移到 Azure
-          href: data-migration-guidance-s3-azure-storage.md
-        - name: 将数据从本地 Hadoop 群集迁移到 Azure
-          href: data-migration-guidance-hdfs-azure-storage.md
-        - name: 将数据从本地 Netezza 服务器迁移到 Azure
-          href: data-migration-guidance-netezza-azure-sqldw.md
-    - name: 使用映射数据流进行转换
-      items:
-        - name: 处理固定宽度的文本文件
-          href: how-to-fixed-width.md
-        - name: 行处理时出错
-          href: how-to-data-flow-error-rows.md
-        - name: Azure SQL DB 到 CosmosDB
-          href: how-to-sqldb-to-cosmosdb.md
-    - name: 从本地进行 SSIS 迁移
-      items:
-        - name: SSIS 迁移概述
-          href: scenario-ssis-migration-overview.md
-        - name: 将 SSISDB 迁移到 Azure SQL 托管实例
-          href: scenario-ssis-migration-ssisdb-mi.md
     - name: 角色和权限
       href: concepts-roles-permissions.md
     - name: 命名规则
@@ -612,7 +588,7 @@
         - name: 监视集成运行时
           href: monitor-integration-runtime.md
         - name: 监视 Azure-SSIS 集成运行时
-          href: 'monitor-integration-runtime.md#azure-ssis-integration-runtime'
+          href: monitor-integration-runtime.md#azure-ssis-integration-runtime
         - name: 重新配置 Azure-SSIS 集成运行时
           href: manage-azure-ssis-integration-runtime.md
         - name: 复制或克隆数据工厂
@@ -683,6 +659,32 @@
           href: how-to-create-tumbling-window-trigger.md
         - name: 创建翻转窗口触发器依赖项
           href: tumbling-window-trigger-dependency.md
+    - name: 方案
+      items:
+        - name: Data Lake 与 EDW 的数据迁移
+          items:
+            - name: 为什么使用 Azure 数据工厂
+              href: data-migration-guidance-overview.md
+            - name: 将数据从 AWS S3 迁移到 Azure
+              href: data-migration-guidance-s3-azure-storage.md
+            - name: 将数据从本地 Hadoop 群集迁移到 Azure
+              href: data-migration-guidance-hdfs-azure-storage.md
+            - name: 将数据从本地 Netezza 服务器迁移到 Azure
+              href: data-migration-guidance-netezza-azure-sqldw.md
+        - name: 使用映射数据流进行转换
+          items:
+            - name: 处理固定宽度的文本文件
+              href: how-to-fixed-width.md
+            - name: 行处理时出错
+              href: how-to-data-flow-error-rows.md
+            - name: Azure SQL DB 到 CosmosDB
+              href: how-to-sqldb-to-cosmosdb.md
+        - name: 从本地进行 SSIS 迁移
+          items:
+            - name: SSIS 迁移概述
+              href: scenario-ssis-migration-overview.md
+            - name: 将 SSISDB 迁移到 Azure SQL 托管实例
+              href: scenario-ssis-migration-ssisdb-mi.md
     - name: 模板
       items:
         - name: 模板概述
