--- a/articles/synapse-analytics/sql-data-warehouse/index.yml
+++ b/articles/synapse-analytics/sql-data-warehouse/index.yml
@@ -6,18 +6,18 @@ metadata:
   description: Azure Synapse 是一种无限制的分析服务，它将企业数据仓库和大数据分析结合在一起。 借助它可以使用无服务器的按需资源或预配资源，任意执行自己定义的大规模数据查询。
   services: synapse-analytics
   ms.service: synapse-analytics
-  ms.subservice: 
+  ms.subservice: sql-dw
   ms.topic: landing-page
   ms.collection: collection
   author: julieMSFT
   ms.author: jrasnick
   ms.date: 04/15/2020
-  ms.openlocfilehash: 23dfa368ae94cada2cd2150fb05a7a294b190860
-  ms.sourcegitcommit: 309a9d26f94ab775673fd4c9a0ffc6caa571f598
+  ms.openlocfilehash: 178ae3234eb5ed41d008aa438e628937c0c53dcb
+  ms.sourcegitcommit: 6fd28c1e5cf6872fb28691c7dd307a5e4bc71228
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 05/09/2020
-  ms.locfileid: "82996855"
+  ms.lasthandoff: 06/23/2020
+  ms.locfileid: "85209498"
 landingContent:
 - title: 关于 Azure Synapse Analytics（以前称为 Azure SQL 数据仓库）
   linkLists:
