--- a/articles/network-watcher/toc.yml
+++ b/articles/network-watcher/toc.yml
@@ -43,6 +43,10 @@
       href: network-watcher-security-group-view-overview.md
     - name: 基于角色的访问控制权限
       href: required-rbac-permissions.md
+    - name: 安全性
+      items:
+        - name: 安全基线
+          href: security-baseline.md
 - name: 操作指南
   items:
     - name: 配置网络观察程序
@@ -163,7 +167,7 @@
     - name: Azure CLI
       href: /cli/azure/network/watcher
     - name: Azure PowerShell
-      href: '/powershell/module/az.network/#network_watcher'
+      href: /powershell/module/az.network/#network_watcher
     - name: Java
       href: /java/api/com.microsoft.azure.management.network
     - name: Ruby
