--- a/articles/databox/TOC.yml
+++ b/articles/databox/TOC.yml
@@ -46,8 +46,12 @@
                   href: data-box-system-requirements-rest.md
             - name: 了解限制
               href: data-box-limits.md
-            - name: 检查安全性
-              href: data-box-security.md
+            - name: 安全性
+              items:
+                - name: 安全基线
+                  href: security-baseline.md
+                - name: 检查安全性
+                  href: data-box-security.md
             - name: 常见问题解答
               href: data-box-faq.md
         - name: 如何
