--- a/articles/synapse-analytics/toc.yml
+++ b/articles/synapse-analytics/toc.yml
@@ -106,6 +106,8 @@
               href: ./spark/apache-spark-history-server.md
     - name: 安全性
       items:
+        - name: 安全基线
+          href: security-baseline.md
         - name: 网络安全
           items:
             - name: Synapse 工作区 IP 防火墙规则
