--- a/articles/security/fundamentals/TOC.yml
+++ b/articles/security/fundamentals/TOC.yml
@@ -58,6 +58,10 @@
       href: network-best-practices.md
     - name: DDoS 保护
       href: ddos-best-practices.md
+    - name: 无关联的 DNS 和子域接管
+      href: subdomain-takeover.md
+    - name: DDoS 防护安全基线
+      href: ddos-protection-security-baseline.md
     - name: 安全混合网络体系结构
       href: 'https://docs.microsoft.com/azure/architecture/reference-architectures/dmz/secure-vnet-hybrid?toc=/azure/security/toc.json&bc=/azure/security/breadcrumb/toc.json'
 - name: IaaS 安全
@@ -94,6 +98,8 @@
       href: 'https://docs.microsoft.com/azure/storage/common/storage-security-guide?toc=/azure/security/toc.json&bc=/azure/security/breadcrumb/toc.json'
     - name: 客户密码箱
       href: customer-lockbox-overview.md
+    - name: 客户密码箱安全基线
+      href: customer-lockbox-security-baseline.md
 - name: 应用程序
   items:
     - name: PaaS
@@ -139,3 +145,5 @@
       href: event-support-ticket.md
     - name: 渗透测试
       href: pen-testing.md
+    - name: Azure 域
+      href: azure-domains.md
