--- a/articles/notification-hubs/TOC.yml
+++ b/articles/notification-hubs/TOC.yml
@@ -46,19 +46,23 @@
       items:
         - name: 适用于 iOS 13 的通知中心更新
           href: push-notification-updates-ios-13.md
-        - name: 向 iOS 应用推送通知
+        - name: 向 iOS 应用发送推送通知
           items:
-            - name: Objective-C
-              href: notification-hubs-ios-apple-push-notification-apns-get-started.md
+            - name: iOS 教程的先决条件
+              href: ios-sdk-get-started.md
+            - name: Objective-C（版本 3.0.0 预览版 1）
+              href: ios-sdk-300.md
+            - name: Objective-C（版本 2.0.4）
+              href: ios-sdk-204.md
             - name: Swift
-              href: notification-hubs-ios-push-notifications-swift-apps-get-started.md
-        - name: 向特定设备推送通知
+              href: ios-sdk-swift-rest.md
+        - name: 向特定设备发送推送通知
           href: notification-hubs-ios-xplat-segmented-apns-push-notification.md
-        - name: 向特定用户推送通知
+        - name: 向特定用户发送推送通知
           href: notification-hubs-aspnet-backend-ios-apple-apns-notification.md
-        - name: 向 Xamarin iOS 应用推送通知
+        - name: 向 Xamarin iOS 应用发送推送通知
           href: xamarin-notification-hubs-ios-push-notification-apns-get-started.md
-        - name: 向 iOS 设备推送本地化通知
+        - name: 向 iOS 设备发送已经过本地化的推动通知
           href: notification-hubs-ios-xplat-localized-apns-push-notification.md
     - name: 跨平台
       items:
@@ -68,21 +72,21 @@
               href: notification-hubs-backend-service-xamarin-forms.md
     - name: Windows Phone
       items:
-        - name: 向应用推送通知
+        - name: 向应用发送推送通知
           href: notification-hubs-windows-mobile-push-notifications-mpns.md
-        - name: 向特定设备推送通知
+        - name: 向特定设备发送推送通知
           href: notification-hubs-windows-phone-push-xplat-segmented-mpns-notification.md
     - name: Windows
       items:
-        - name: 向通用 Windows 平台应用推送通知
+        - name: 向通用 Windows 平台应用发送推送通知
           href: notification-hubs-windows-store-dotnet-get-started-wns-push-notification.md
-        - name: 向特定设备推送通知
+        - name: 向特定设备发送推送通知
           href: notification-hubs-windows-notification-dotnet-push-xplat-segmented-wns.md
-        - name: 向应用推送本地化通知
+        - name: 向应用发送已经过本地化的推动通知
           href: notification-hubs-windows-store-dotnet-xplat-localized-wns-push-notification.md
-        - name: 向特定用户推送通知
+        - name: 向特定用户发送推送通知
           href: notification-hubs-aspnet-backend-windows-dotnet-wns-notification.md
-        - name: 推送基于位置的通知
+        - name: 发送基于位置的推送通知
           href: notification-hubs-push-bing-spatial-data-geofencing-notification.md
 - name: 示例
   items:
